# FTests

./: README.md
include/: ftests_get_args.h  ftests_structures.h  func_args.h  main.h  tests.h  utilitaries.h
src/: CMakeLists.txt  ftests_get_args.c  func_args.c  main.c  test_file.c  test_file_2.c  tests.c  utilitaries.c
